objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Diff__c</fullName>
        <formula>TEXT(ROUND(UnitPrice, 2)) +&quot;|&quot;+ TEXT(ROUND(SBQQ__QuoteLine__r.SBQQ__NetPrice__c, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossMargin__c</fullName>
        <description>CPQ Twin-field for the SBQQ__QuoteLine__c.GrossMargin__c field
https://imcdgroup.atlassian.net/browse/SFDP-1942</description>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncorrectAmountReason__c</fullName>
        <description>Sibling field of IncorrectAmount__c</description>
        <formula>IF ( ( ISPICKVAL( SBQQ__QuoteLine__r.Stage__c, &apos;Lost&apos; ) &amp;&amp; UnitPrice &lt;&gt; 0 ), &apos;Stage=Lost, UnitPrice &lt;&gt; 0&apos;, &apos;&apos;)
+&quot;|&quot;+	
IF ( ( ISPICKVAL( SBQQ__QuoteLine__r.Stage__c, &apos;Lost&apos; ) &amp;&amp; TotalPrice &lt;&gt; 0 ), &apos;Stage=Lost, TotalPrice &lt;&gt; 0&apos;, &apos;&apos;)
+&quot;|&quot;+		
IF ( ( Quantity &lt;&gt; SBQQ__QuoteLine__r.SBQQ__EffectiveQuantity__c ) , &apos;Quantity &lt;&gt; SBQQ__QuoteLine__r.SBQQ__EffectiveQuantity__c&apos;, &apos;&apos;)
+&quot;|&quot;+
IF ( ( TEXT (SBQQ__QuoteLine__r.CurrencyIsoCode) &lt;&gt; TEXT (CurrencyIsoCode) ), &apos;CurrencyIsoCode &lt;&gt; SBQQ__QuoteLine__r.CurrencyIsoCode&apos;, &apos;&apos;)
+&quot;|&quot;+
IF ( AND (  TEXT ( SBQQ__QuoteLine__r.Stage__c ) &lt;&gt; &apos;Lost&apos;, SBQQ__QuoteLine__r.SBQQ__NetPrice__c &lt;&gt; UnitPrice, ABS ( SBQQ__QuoteLine__r.SBQQ__NetPrice__c - UnitPrice ) &gt; 0.1 ), &apos;UnitPrice &lt;&gt; SBQQ__QuoteLine__r.SBQQ__NetPrice__c&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incorrect Amount Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncorrectAmount__c</fullName>
        <description>This field identifies whether the UnitPrice, TotalPrice and Quantity fields are synchronized correctly with the record&apos;s related SBQQ__QuoteLine__c (from the Primary Quote). 
- If SBQQ__QuoteLine__r.Stage__c = Lost, the UnitPrice + TotalPrice on the OpportunityLineItem should be 0
- If SBQQ__QuoteLine__r.Stage__c &lt;&gt; Lost, the UnitPrice should match the SBQQ__NetPrice__c
- Quantity should always match SBQQ__EffectiveQuantity__c

See also: https://help.salesforce.com/articleView?id=000271528&amp;type=1&amp;language=en_US</description>
        <formula>OR (
    AND (
        ISPICKVAL( SBQQ__QuoteLine__r.Stage__c, &apos;Lost&apos; )
        , UnitPrice &lt;&gt; 0
    )
    ,	AND (
        ISPICKVAL( SBQQ__QuoteLine__r.Stage__c, &apos;Lost&apos; )
        , TotalPrice &lt;&gt; 0
    )
    , SBQQ__QuoteLine__r.SBQQ__EffectiveQuantity__c &lt;&gt; Quantity
    , TEXT (SBQQ__QuoteLine__r.CurrencyIsoCode) &lt;&gt; TEXT (CurrencyIsoCode)
    , AND (
        TEXT ( SBQQ__QuoteLine__r.Stage__c ) &lt;&gt; &apos;Lost&apos;
        , SBQQ__QuoteLine__r.SBQQ__NetPrice__c &lt;&gt; UnitPrice
        , ABS ( SBQQ__QuoteLine__r.SBQQ__NetPrice__c - UnitPrice ) &gt; 0.1
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incorrect Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityQuoteLineStage__c</fullName>
        <description>https://imcdgroup.atlassian.net/browse/SFDP-1942</description>
        <formula>TEXT(SBQQ__QuoteLine__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Quote Line Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>https://imcdgroup.atlassian.net/browse/SFDP-1942</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>